--- a/mystyle.sty
+++ b/mystyle.sty
@@ -3,11 +3,16 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
-\usepackage[Swedish]{babel}
+\usepackage[swedish]{babel}
+\usepackage{acronym}
 
 \usepackage{subfiles}
 
 \usepackage{titlesec}
 
+\usepackage{graphicx}
+
 % Maybe polish this a bit
 \titleformat{\chapter}{\normalfont\huge\bfseries}{\huge\thechapter}{20pt}{\huge}
+
+\graphicspath{{img/}{../img/}}
