--- a/report.tex
+++ b/report.tex
@@ -1,14 +1,25 @@
 % !TeX encoding = UTF-8
 % !TeX spellcheck = sv_SE
-\documentclass[a4paper]{report}
+\documentclass[12pt,a4paper]{report}
 
 \usepackage{mystyle}
 
+%\titlehead{\centering\includegraphics{xlent-logo.png}}
 \title{Xlent\ldots}
 \author{Oskar Almstedt, Adam Hellberg, Tim Hemdal och Niclas Hällgren}
 
 \begin{document}
-    \maketitle
+    \begin{titlepage}
+    \begin{center}
+    {\Huge\bfseries Studiebesök på Xlent}\\[2cm]
+    
+    \includegraphics[scale=1]{xlent-logo.png}\\[4cm]
+    
+    Oskar Almstedt, Adam Hellberg, Tim Hemdal och Niclas Hällgren\\[2cm]
+    
+    \today
+    \end{center}
+    \end{titlepage}
     
     %\tableofcontents
     
