--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -4,4 +4,13 @@
 
 \begin{document}
     \chapter{Inledning}
+    Xlent är uppdelat i två grenar: Xlent Strategy och Xlent IT Consulting.
+    
+    \paragraph{Xlent Strategy} fokuserar på affärsrådgivning.
+    
+    \paragraph{Xlent IT Consulting} tillhandahåller affärslösningar och konsulttjänster.
+    
+    \bigskip
+    
+    Målet med studiebesöket är att få en uppfattning om huruvida det är en intressant plats att jobba på i framtiden. Och även få en insyn i hur ett liv som konsult kan vara.
 \end{document}
