--- a/tex/presentation.tex
+++ b/tex/presentation.tex
@@ -4,4 +4,13 @@
 
 \begin{document}
     \chapter{Redovisning av besöket}
+    När vi anlände till företaget bemöttes vi av Örjan, en anställd på Xlent. De tre anställda som var på plats presenterade sig, sedan fick vi en PowerPoint-presentation om företagets historia, vad de gör just nu, och deras framtidsvisioner.
+    
+    En av bilderna i presentationen visade vilka företag som varit kunder hos Xlent. Det var ett stort antal olika företag och områden, från skolor till banker.
+    
+    Att se den stora variationen i kunder var intressant, eftersom det betyder att ett arbete hos Xlent med stor sannolikhet är mycket varierat och givande.
+    
+    Efter presentationen började vi diskutera våra frågor över en kopp kaffe i deras kontor. De beskrev även sina individuella jobb och uppgifter mer ingående och personligt.
+    
+    När vi kände oss färdiga och hade fått svar på alla frågor tackade vi för besöket och diskuterade en stund innan vi åkte hem.
 \end{document}
