--- a/tex/questions_discussion.tex
+++ b/tex/questions_discussion.tex
@@ -4,4 +4,32 @@
 
 \begin{document}
     \chapter{Frågor och diskussionspunkter}
+    
+    \paragraph{Vilka specifika kunskaper bör man ha för att öka sina chanser till jobb?}
+    Xlent anser att kunskaper utöver grundläggande programmeringskunskaper är ett plus men inte ett krav.
+    
+    \paragraph{Vad jobbar en typisk utvecklare med?}
+    Det skiljer sig mellan olika kunder, men kan vara allt ifrån nya säkerhetssystem till en funktionell hemsida för företaget.
+    
+    \paragraph{Vilka plattformar används?}
+    Som på föregående fråga beror svaret på kundens behov och förutsättningar. Dock ofta Java, C/C++ eller C\#. Ibland behöver anställda lära sig nya språk eller plattformar beroende på utvecklingsmiljön som finns hos kunden.
+    
+    \paragraph{Hur ser karriärmöjligheterna ut?}
+    Just nu (i Karlstad) anställs mest personer som redan har erfarenhet i branschen, eftersom det inte finns tillräckligt med erfarna anställda för att vägleda juniorer i projekt.
+    
+    Ett av Xlents mål är att få fler erfarna anställda för att kunna rekrytera personer med mindre erfarenhet, som då kan arbeta tillsammans med en veteran tills de blir vana i yrket.
+    
+    \paragraph{I vilka länder är ni verksamma?}
+    Xlent har för närvarande kontor i Sverige och Norge. Kontoret i Norge är dock inriktat på Strategy-grenen.
+    
+    \paragraph{Möjligheter att jobba hemifrån?}
+    Möjlighet att jobba hemifrån finns så länge det fungerar med kundens krav. De flesta väljer dock att arbeta från kontoret då de anser att det är mindre stressigt och uppskattar den sociala delen.
+    
+    \paragraph{Vilken källkodshantering används?}
+    Som vanligt beror det mycket på kundens krav, men de föredrar Git.
+    
+    \paragraph{Finns det möjlighet till examensjobb?}
+    De vill gärna kunna ordna examensjobb, men för närvarande har de inte den tiden som krävs för att lära känna studenter, då de är ute på uppdrag.
+    
+    Dock rekommenderar de att engagera sig i universitetets mentorprogram för att få ett examensjobb passande det man vill arbeta med.
 \end{document}
