Några av Niclas komplement
La till en del företagsinformation, kompetensutveckling och lista några
av deras större kunder.

--- a/report.tex
+++ b/report.tex
@@ -1,21 +1,21 @@
-% !TeX encoding = UTF-8
+% !TEX encoding = UTF-8 Unicode
 % !TeX spellcheck = sv_SE
 \documentclass[12pt,a4paper]{report}
 
 \usepackage{mystyle}
 
 %\titlehead{\centering\includegraphics{xlent-logo.png}}
-\title{Xlent\ldots}
-\author{Oskar Almstedt, Adam Hellberg, Tim Hemdal och Niclas Hällgren}
+\title{XLENT\ldots}
+\author{Oskar Almstedt, Adam Hellberg, Tim Hemdal och Niclas HÃ€llgren}
 
 \begin{document}
     \begin{titlepage}
     \begin{center}
-    {\Huge\bfseries Studiebesök på Xlent}\\[2cm]
+    {\Huge\bfseries Studiebesök på XLENT}\\[2cm]
     
     \includegraphics[scale=1]{xlent-logo.png}\\[4cm]
     
-    Oskar Almstedt, Adam Hellberg, Tim Hemdal och Niclas Hällgren\\[2cm]
+    Oskar Almstedt, Adam Hellberg, Tim Hemdal och Niclas HÃ€llgren\\[2cm]
     
     \today
     \end{center}
