--- a/tex/company_description.tex
+++ b/tex/company_description.tex
@@ -5,4 +5,12 @@
 \begin{document}
     \chapter{FÃ¶retaget och verksamheten}
     
+    XLENT i Karlstad grundades 2012 och har störst fokus på IT konsulterna med ca 16 anställda. I hela XLENT koncernen är antalet närmare 200. I en av bilderna visade de att XLENT identifierar sig med tre ord;\\
+Pålitlig, Modig och Nära. Kort menar man att:\\
+\\
+    Pålitlig = leverera bra lösningar och innan deadline.\\
+    Modig = varje konsult ska våga föreslå bästa möjliga lösning för kunden\\
+    Nära = Man ska jobba lokalt och nära kunden\\
+ \\
+Inom XLENT satsar man mycket tid och pengar på personals kompetensutveckling. Allt för att hålla sig uppdaterat och leverera bästa möjliga resultat i sina projekt.
 \end{document}
