--- a/tex/questions_discussion.tex
+++ b/tex/questions_discussion.tex
@@ -15,9 +15,9 @@
     Som på föregående fråga beror svaret på kundens behov och förutsättningar. Dock ofta Java, C/C++ eller C\#. Ibland behöver anställda lära sig nya språk eller plattformar beroende på utvecklingsmiljön som finns hos kunden.
     
     \paragraph{Hur ser karriärmöjligheterna ut?}
-    Just nu (i Karlstad) anställs mest personer som redan har erfarenhet i branschen, eftersom det inte finns tillräckligt med erfarna anställda för att vägleda juniorer i projekt.
-    
-    Ett av Xlents mål är att få fler erfarna anställda för att kunna rekrytera personer med mindre erfarenhet, som då kan arbeta tillsammans med en veteran tills de blir vana i yrket.
+    Just nu (i Karlstad) anställs mest personer som redan har erfarenhet i branschen, eftersom det inte finns tillräckligt med erfarna anställda för att vägleda juniorer i projekt.\\
+\\
+    Ett av XLENTs mål är att få fler erfarna anställda för att kunna rekrytera personer med mindre erfarenhet, som då kan arbeta tillsammans med en veteran tills de blir vana i yrket.
     
     \paragraph{I vilka länder är ni verksamma?}
     Xlent har för närvarande kontor i Sverige och Norge. Kontoret i Norge är dock inriktat på Strategy-grenen.
