--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -4,11 +4,11 @@
 
 \begin{document}
     \chapter{Inledning}
-    Xlent är uppdelat i två grenar: Xlent Strategy och Xlent IT Consulting.
+    XLENT är uppdelat i två grenar: XLENT Strategy och XLENT IT Consulting.
     
-    \paragraph{Xlent Strategy} fokuserar på affärsrådgivning.
+    \paragraph{XLENT Strategy} fokuserar på affärsrådgivning.
     
-    \paragraph{Xlent IT Consulting} tillhandahåller affärslösningar och konsulttjänster.
+    \paragraph{XLENT IT Consulting} tillhandahåller affärslösningar och konsulttjänster.
     
     \bigskip
     
